Title/metadata should match toc

--- a/docs/guides/save-jobs.ipynb
+++ b/docs/guides/save-jobs.ipynb
@@ -5,7 +5,7 @@
    "id": "539f98fa-9ccc-472a-99da-ebe6382243dc",
    "metadata": {},
    "source": [
-    "# Save and retrieve jobs"
+    "# Retrieve and save job results"
    ]
   },
   {
@@ -230,7 +230,7 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "Save and retrieve Qiskit objects"
+  "title": "Retrieve and save job results"
  },
  "nbformat": 4,
  "nbformat_minor": 2
