--- a/docs/api/qiskit/release-notes/index.mdx
+++ b/docs/api/qiskit/release-notes/index.mdx
@@ -9,13 +9,23 @@ New features, bug fixes, and other changes in previous versions of Qiskit SDK.
 
 ## Release notes by version
 
+<details>
+<summary>v2</summary>
 * [2.1](./2.1)
 * [2.0](./2.0)
+</details>
+
+<details>
+<summary>v1</summary>
 * [1.4](./1.4)
 * [1.3](./1.3)
 * [1.2](./1.2)
 * [1.1](./1.1)
 * [1.0](./1.0)
+</details>
+
+<details>
+<summary>v0</summary>
 * [0.46](./0.46)
 * [0.45](./0.45)
 * [0.44](./0.44)
@@ -58,3 +68,4 @@ New features, bug fixes, and other changes in previous versions of Qiskit SDK.
 * [0.7](./0.7)
 * [0.6](./0.6)
 * [0.5](./0.5)
+</details>
