no "others" distinction

--- a/docs/guides/access-groups.mdx
+++ b/docs/guides/access-groups.mdx
@@ -245,9 +245,9 @@ Key:
 | View billing information | ✅| ✅| ❌| 
 | Owner notifications | ✅| ❌| ❌| 
 | Submit quantum workloads | ✅ (*On all Qiskit Runtime instances*)| ✅ (*On all Qiskit Runtime instances*)| ✅ (*Only on a particular Qiskit Runtime instance*) | 
-| View others' quantum workloads | ✅ (*On all Qiskit Runtime instances*)| ✅ (*On all Qiskit Runtime instances*)| ✅ (*Only on a particular Qiskit Runtime instance*)| 
-| Cancel others' quantum workloads | ✅ (*On all Qiskit Runtime instances*)| ✅ (*On all Qiskit Runtime instances*)| ✅ (*Only on a particular Qiskit Runtime instance*)| 
-| Delete others' quantum workloads | ✅ (*On all Qiskit Runtime instances*)| ✅ (*On all Qiskit Runtime instances*) | ❌| 
+| View quantum workloads | ✅ (*On all Qiskit Runtime instances*)| ✅ (*On all Qiskit Runtime instances*)| ✅ (*Only on a particular Qiskit Runtime instance*)| 
+| Cancel quantum workloads | ✅ (*On all Qiskit Runtime instances*)| ✅ (*On all Qiskit Runtime instances*)| ✅ (*Only on a particular Qiskit Runtime instance*)| 
+| Delete quantum workloads | ✅ (*On all Qiskit Runtime instances*)| ✅ (*On all Qiskit Runtime instances*) | ❌| 
 | Create support cases | ✅| ✅ (*If the access policy is included in the access group*) | ✅ (*If the access group gives access to a Premium Plan instance*)| 
 | Configure an [identity provider](https://cloud.ibm.com/iam/identity-providers) to connect your external user repositories to your IBM Cloud account | ✅| ❌| ❌| 
 
