--- a/docs/guides/multiverse-computing-singularity.ipynb
+++ b/docs/guides/multiverse-computing-singularity.ipynb
@@ -649,9 +649,7 @@
    "source": [
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_quantum_platform\", instance=\"USER_CRN\", token=\"USER_API_KEY\"\n",
-    ")\n",
+    "catalog = QiskitFunctionsCatalog(channel=\"ibm_quantum_platform\")\n",
     "\n",
     "# load function\n",
     "singularity = catalog.load(\"multiverse/singularity\")"
@@ -1106,7 +1104,7 @@
  "metadata": {
   "description": "A Qiskit Function to create and train a hybrid quantum ensemble classifier from multiple learners and optimizes them for diversity and generalization with QAOA",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "qiskit-documentation-3.12",
    "language": "python",
    "name": "python3"
   },
@@ -1120,7 +1118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.12.8"
   },
   "title": "Singularity Machine Learning by Multiverse Computing"
  },
