--- a/docs/api/qiskit-addon-sqd/counts.mdx
+++ b/docs/api/qiskit-addon-sqd/counts.mdx
@@ -18,7 +18,7 @@ Functions for transforming counts dictionaries.
 
 ### counts\_to\_arrays
 
-<Function id="qiskit_addon_sqd.counts.counts_to_arrays" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.11/qiskit_addon_sqd/counts.py#L24-L42" signature="counts_to_arrays(counts)">
+<Function id="qiskit_addon_sqd.counts.counts_to_arrays" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.12/qiskit_addon_sqd/counts.py#L24-L42" signature="counts_to_arrays(counts)">
   Convert a counts dictionary into a bitstring matrix and a probability array.
 
   **Parameters**
@@ -32,19 +32,19 @@ Functions for transforming counts dictionaries.
 
   **Return type**
 
-  [tuple](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")\[[*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.2)"), [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.2)")]
+  [tuple](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")\[[*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.3)"), [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.3)")]
 </Function>
 
 ### generate\_counts\_uniform
 
-<Function id="qiskit_addon_sqd.counts.generate_counts_uniform" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.11/qiskit_addon_sqd/counts.py#L64-L97" signature="generate_counts_uniform(num_samples, num_bits, rand_seed=None)">
+<Function id="qiskit_addon_sqd.counts.generate_counts_uniform" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.12/qiskit_addon_sqd/counts.py#L64-L97" signature="generate_counts_uniform(num_samples, num_bits, rand_seed=None)">
   Generate a bitstring counts dictionary of samples drawn from the uniform distribution.
 
   **Parameters**
 
   *   **num\_samples** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – The number of samples to draw
   *   **num\_bits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – The number of bits in the bitstrings
-  *   **rand\_seed** ([*Generator*](https://numpy.org/doc/stable/reference/random/generator.html#numpy.random.Generator "(in NumPy v2.2)")  *|*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)") *| None*) – A seed for controlling randomness
+  *   **rand\_seed** ([*Generator*](https://numpy.org/doc/stable/reference/random/generator.html#numpy.random.Generator "(in NumPy v2.3)")  *|*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)") *| None*) – A seed for controlling randomness
 
   **Returns**
 
@@ -61,7 +61,7 @@ Functions for transforming counts dictionaries.
 
 ### generate\_counts\_bipartite\_hamming
 
-<Function id="qiskit_addon_sqd.counts.generate_counts_bipartite_hamming" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.11/qiskit_addon_sqd/counts.py#L120-L173" signature="generate_counts_bipartite_hamming(num_samples, num_bits, *, hamming_right, hamming_left, rand_seed=None)">
+<Function id="qiskit_addon_sqd.counts.generate_counts_bipartite_hamming" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.12/qiskit_addon_sqd/counts.py#L120-L173" signature="generate_counts_bipartite_hamming(num_samples, num_bits, *, hamming_right, hamming_left, rand_seed=None)">
   Generate a bitstring counts dictionary with specified bipartite hamming weight.
 
   **Parameters**
@@ -70,7 +70,7 @@ Functions for transforming counts dictionaries.
   *   **num\_bits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – The number of bits in the bitstrings
   *   **hamming\_right** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – The hamming weight on the right half of each bitstring
   *   **hamming\_left** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – The hamming weight on the left half of each bitstring
-  *   **rand\_seed** ([*Generator*](https://numpy.org/doc/stable/reference/random/generator.html#numpy.random.Generator "(in NumPy v2.2)")  *|*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)") *| None*) – A seed for controlling randomness
+  *   **rand\_seed** ([*Generator*](https://numpy.org/doc/stable/reference/random/generator.html#numpy.random.Generator "(in NumPy v2.3)")  *|*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)") *| None*) – A seed for controlling randomness
 
   **Returns**
 
@@ -89,7 +89,7 @@ Functions for transforming counts dictionaries.
 
 ### normalize\_counts\_dict
 
-<Function id="qiskit_addon_sqd.counts.normalize_counts_dict" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.11/qiskit_addon_sqd/counts.py#L176-L183" signature="normalize_counts_dict(counts)">
+<Function id="qiskit_addon_sqd.counts.normalize_counts_dict" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.12/qiskit_addon_sqd/counts.py#L176-L183" signature="normalize_counts_dict(counts)">
   Convert a counts dictionary into a probability dictionary.
 
   **Parameters**
@@ -99,5 +99,48 @@ Functions for transforming counts dictionaries.
   **Return type**
 
   [*Mapping*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Mapping "(in Python v3.13)")\[[str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)"), [float](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")]
+</Function>
+
+### bit\_array\_to\_arrays
+
+<Function id="qiskit_addon_sqd.counts.bit_array_to_arrays" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.12/qiskit_addon_sqd/counts.py#L45-L61" signature="bit_array_to_arrays(bit_array)">
+  Convert a bit array into a bitstring matrix and a probability array.
+
+  **Parameters**
+
+  **bit\_array** ([*BitArray*](/docs/api/qiskit/qiskit.primitives.BitArray "(in Qiskit v2.1)")) – The bit array to convert
+
+  **Returns**
+
+  *   A 2D array representing the sampled bitstrings. Each row represents a bitstring, and each element is a `bool` representation of the bit’s value
+  *   A 1D array containing the probability with which each bitstring was sampled
+
+  **Return type**
+
+  [tuple](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")\[[*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.3)"), [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.3)")]
+</Function>
+
+### generate\_bit\_array\_uniform
+
+<Function id="qiskit_addon_sqd.counts.generate_bit_array_uniform" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.12/qiskit_addon_sqd/counts.py#L100-L117" signature="generate_bit_array_uniform(num_samples, num_bits, rand_seed=None)">
+  Generate a bit array of samples drawn from the uniform distribution.
+
+  **Parameters**
+
+  *   **num\_samples** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – The number of samples to draw
+  *   **num\_bits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – The number of bits in the bitstrings
+  *   **rand\_seed** ([*Generator*](https://numpy.org/doc/stable/reference/random/generator.html#numpy.random.Generator "(in NumPy v2.3)")  *|*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)") *| None*) – A seed for controlling randomness
+
+  **Returns**
+
+  The sampled bit array.
+
+  **Raises**
+
+  [**ValueError**](https://docs.python.org/3/library/exceptions.html#ValueError "(in Python v3.13)") – `num_samples` and `num_bits` must be positive integers.
+
+  **Return type**
+
+  [*BitArray*](/docs/api/qiskit/qiskit.primitives.BitArray "(in Qiskit v2.1)")
 </Function>
 
