update smaller files

--- a/learning/courses/variational-algorithm-design/ansaetze-and-variational-forms.ipynb
+++ b/learning/courses/variational-algorithm-design/ansaetze-and-variational-forms.ipynb
@@ -23,15 +23,11 @@
     "\n",
     "At the heart of all variational algorithms lies the key idea of analyzing the differences between states, which are conveniently related through some well-behaved mapping (for example, continuous, differentiable) from a set of parameters or variables — hence the name.\n",
     "\n",
-    "First, we'll explore how to construct parameterized circuits by hand. We'll use these circuits to define a [variational form][variational] that represents a collection of parameterized states for our variational algorithm to explore. Then, we'll construct our [ansatz][ansatz] by applying this variational form to our reference state.\n",
+    "First, we'll explore how to construct parameterized circuits by hand. We'll use these circuits to define a <DefinitionTooltip definition=\"Layers of parameterized gates that are repeated a certain number of times, and the parameters of the gates are optimized during the algorithm to minimize the cost function.\">variational form</DefinitionTooltip> that represents a collection of parameterized states for our variational algorithm to explore. Then, we'll construct our <DefinitionTooltip definition=\"Combination of a reference operator and a variational form, to describe the search space that we're exploring.\">ansatz</DefinitionTooltip> by applying this variational form to our reference state.\n",
     "\n",
     "We'll also explore how to trade off speed versus accuracy while exploring this search space.\n",
     "\n",
-    "![A diagram showing key components of the ansatz discussion, including heuristic ansaetze and problem-specific ansaetze.](/learning/images/courses/variational-algorithm-design/ansaetze-and-variational-forms/ansatz-workflow.svg)\n",
-    "\n",
-    "[variational]: #definition-tooltip \"Layers of parameterized gates that are repeated a certain number of times, and the parameters of the gates are optimized during the algorithm to minimize the cost function..\"\n",
-    "\n",
-    "[ansatz]: #definition-tooltip \"Combination of a reference operator and a variational form, to describe the search space that we're exploring.\""
+    "![A diagram showing key components of the ansatz discussion, including heuristic ansaetze and problem-specific ansaetze.](/learning/images/courses/variational-algorithm-design/ansaetze-and-variational-forms/ansatz-workflow.svg)"
    ]
   },
   {
