--- a/learning/courses/variational-algorithm-design/optimization-loops.ipynb
+++ b/learning/courses/variational-algorithm-design/optimization-loops.ipynb
@@ -199,11 +199,7 @@
     "\n",
     "### Gradient-Based\n",
     "\n",
-    "For our cost function $C(\\vec\\theta)$, if we have access to the gradient of the function $\\vec{\\nabla} C(\\vec\\theta)$ starting from an initial point, the simplest way to minimize the function is to update the parameters towards the direction of steepest descent of the function. That is, we update the parameters as $\\vec\\theta_{n+1} = \\vec\\theta_n - \\eta \\vec{\\nabla} C(\\vec\\theta)$, where $\\eta$ is the learning rate - a small, positive [hyperparameter][hyperparameter] that controls the size of the update. We continue doing this until we converge to a [local minimum][local-minimum] of the cost function, $C({\\vec\\theta^*})$.\n",
-    "\n",
-    "[hyperparameter]: #definition-tooltip \"A hyperparameter is a parameter that we use to control our algorithm. The 'hyper' distinguishes it from the parameters (θ) that our algorithm is trying to find.\"\n",
-    "\n",
-    "[local-minimum]: #definition-tooltip \"A local minimum is the lowest point of the function, for a small range of values of theta. In contrast, a global minimum is the lowest point, anywhere in our function (that is, for any value of θ).\""
+    "For our cost function $C(\\vec\\theta)$, if we have access to the gradient of the function $\\vec{\\nabla} C(\\vec\\theta)$ starting from an initial point, the simplest way to minimize the function is to update the parameters towards the direction of steepest descent of the function. That is, we update the parameters as $\\vec\\theta_{n+1} = \\vec\\theta_n - \\eta \\vec{\\nabla} C(\\vec\\theta)$, where $\\eta$ is the learning rate - a small, positive <DefinitionTooltip definition=\"A hyperparameter is a parameter that we use to control our algorithm. The 'hyper' distinguishes it from the parameters (θ) that our algorithm is trying to find.\">hyperparameter</DefinitionTooltip> that controls the size of the update. We continue doing this until we converge to a <DefinitionTooltip definition=\"A local minimum is the lowest point of the function, for a small range of values of theta. In contrast, a global minimum is the lowest point, anywhere in our function (that is, for any value of θ).\">local minimum</DefinitionTooltip> of the cost function, $C({\\vec\\theta^*})$."
    ]
   },
   {
@@ -334,7 +330,7 @@
     "![A complicated curved manifold with many peaks and troughs.](/learning/images/courses/variational-algorithm-design/optimization-loops/optimization-loss-landscape.svg)\n",
     "\n",
     "\n",
-    "Regardless of the type of optimization method used, if the cost landscape is relatively flat, it can be challenging for the method to determine the appropriate direction to search. This scenario is referred to as a [barren plateau][barren-plateaus], where the cost landscape becomes progressively flatter (and thus more challenging to determine the direction to the minimum). For a broad range of parameterized quantum circuits, the probability that the gradient along any reasonable direction is non-zero to some fixed precision decreases exponentially as the number of qubits increases.\n",
+    "Regardless of the type of optimization method used, if the cost landscape is relatively flat, it can be challenging for the method to determine the appropriate direction to search. This scenario is referred to as a <DefinitionTooltip definition=\"When gradients of parametrized quantum circuits become exponentially small with respect to the number of qubits, making optimization difficult and potentially impossible.\">barren plateau</DefinitionTooltip>, where the cost landscape becomes progressively flatter (and thus more challenging to determine the direction to the minimum). For a broad range of parameterized quantum circuits, the probability that the gradient along any reasonable direction is non-zero to some fixed precision decreases exponentially as the number of qubits increases.\n",
     "\n",
     "![A diagram of a geographic plateau compared to a slope of a mountain, to explain why a gradient helps us find a minimum and a plateau hinders our efforts.](/learning/images/courses/variational-algorithm-design/optimization-loops/optimization-barren-plateaus.svg)\n",
     "\n",
@@ -343,9 +339,7 @@
     "- **Bootstrapping** can help the optimization loop avoid getting stuck in a parameter space where the gradient is small.\n",
     "- **Experimenting with hardware-efficient ansatz**: Since we're using a noisy quantum system as a black-box oracle, the quality of those evaluations can affect the optimizer's performance. Using hardware-efficient ansatz, such as [`EfficientSU2`](/docs/api/qiskit/qiskit.circuit.library.EfficientSU2), may avoid producing exponentially small gradients.\n",
     "- **Experimenting with error suppression and error mitigation**:  the Qiskit Runtime primitives provide a simple interface to experiment with various values for `optimization_level` and `resilience_setting`, respectively. This can reduce the impact of noise and make the optimization process more efficient.\n",
-    "- **Experimenting with gradient-free optimizers**: Unlike gradient-based optimization algorithms, optimizers such as `COBYLA` do not rely on gradient information to optimize the parameters and are therefore less likely to be affected by the barren plateau.\n",
-    "\n",
-    "[barren-plateaus]: #definition-tooltip \"When gradients of parametrized quantum circuits become exponentially small with respect to the number of qubits, making optimization difficult and potentially impossible.\""
+    "- **Experimenting with gradient-free optimizers**: Unlike gradient-based optimization algorithms, optimizers such as `COBYLA` do not rely on gradient information to optimize the parameters and are therefore less likely to be affected by the barren plateau."
    ]
   },
   {
