--- a/learning/courses/variational-algorithm-design/variational-algorithms.ipynb
+++ b/learning/courses/variational-algorithm-design/variational-algorithms.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "Before beginning, please complete this short [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_aa6PBQMyWgsgJkq), which is important to help improve our content offerings and user experience.\n",
     "\n",
-    "This course covers the specifics of variational algorithms and near-term hybrid quantum-classical algorithms based on the variational theorem of quantum mechanics. These algorithms can leverage the utility provided by today's non-fault-tolerant quantum computers, making them ideal candidates to achieve [quantum advantage][advantage].\n",
+    "This course covers the specifics of variational algorithms and near-term hybrid quantum-classical algorithms based on the variational theorem of quantum mechanics. These algorithms can leverage the utility provided by today's non-fault-tolerant quantum computers, making them ideal candidates to achieve <DefinitionTooltip definition=\"Practical demonstration of a quantum computer's ability to solve certain computational problems faster than classical computers.\">quantum advantage</DefinitionTooltip>.\n",
     "\n",
     "Throughout this course, we will explore:\n",
     "\n",
@@ -31,9 +31,7 @@
     "- Trade-offs associated with each step\n",
     "- How to use [Qiskit Runtime primitives](/docs/guides/primitives) to optimize for speed and accuracy\n",
     "\n",
-    "While this course is meant to be a starting place for researchers and developers to explore the utility of quantum computers, feel free to explore the theoretical and foundational knowledge around quantum computing in general in the [Basics of Quantum Information and Computation](/learning/courses/basics-of-quantum-information) (also available as [a series of YouTube videos](https://www.youtube.com/playlist?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO)).\n",
-    "\n",
-    "[advantage]: #definition-tooltip \"Practical demonstration of a quantum computer's ability to solve certain computational problems faster than classical computers.\""
+    "While this course is meant to be a starting place for researchers and developers to explore the utility of quantum computers, feel free to explore the theoretical and foundational knowledge around quantum computing in general in the [Basics of Quantum Information and Computation](/learning/courses/basics-of-quantum-information) (also available as [a series of YouTube videos](https://www.youtube.com/playlist?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO))."
    ]
   },
   {
@@ -60,7 +58,7 @@
     }
    },
    "source": [
-    "Variational algorithms include several modular components that can be combined and optimized based on algorithm, software, and hardware advancements. This includes a *cost function* that describes a specific problem with a set of parameters, an *ansatz* to express the search space with these parameters, and an *optimizer* to iteratively explore the search space. During each iteration, the optimizer evaluates the [cost function][cost] with the current parameters and selects the next iteration's parameters until it [converges][converge] on an optimal solution. The hybrid nature of this family of algorithms comes from the fact that the cost functions are evaluated using quantum resources and optimized through classical ones.\n",
+    "Variational algorithms include several modular components that can be combined and optimized based on algorithm, software, and hardware advancements. This includes a *cost function* that describes a specific problem with a set of parameters, an *ansatz* to express the search space with these parameters, and an *optimizer* to iteratively explore the search space. During each iteration, the optimizer evaluates the <DefinitionTooltip definition=\"A mathematical function used to measure the difference between the predicted output of a model or algorithm and the actual output, with the goal of minimizing this difference through optimization.\">cost function</DefinitionTooltip> with the current parameters and selects the next iteration's parameters until it <DefinitionTooltip definition=\"Reaching a stable and optimal solution, where further iterations or modifications to the algorithm no longer result in significant improvements or changes to the solution.\">converges</DefinitionTooltip> on an optimal solution. The hybrid nature of this family of algorithms comes from the fact that the cost functions are evaluated using quantum resources and optimized through classical ones.\n",
     "\n",
     "1. **Initialize problem**: Variational algorithms start by initializing the quantum computer in a _default state_ $|0\\rangle$, then transforming it to some desired (non-parametrized) state $|\\rho\\rangle$, which we will call _reference state_.\n",
     "\n",
@@ -92,11 +90,7 @@
     "\n",
     "4. **Optimize parameters**: Evaluations are taken to a classical computer, where a classical optimizer analyzes them and chooses the next set of values for the variational parameters. If we have a pre-existing optimal solution, we can set it as an *initial point* $\\vec\\theta_0$ to *bootstrap* our optimization. Using this *initial state* $|\\psi(\\vec\\theta_0)\\rangle$ could help our optimizer find a valid solution faster.\n",
     "\n",
-    "5. **Adjust ansatz parameters with results, and re-run**: The  entire process is repeated until the classical optimizer's finalization criteria are met, and an optimal set of parameter values $\\vec\\theta^*$ is returned. The proposed solution state for our problem will then be $|\\psi(\\vec\\theta^*)\\rangle = U_A(\\vec\\theta^*)|0\\rangle$.\n",
-    "\n",
-    "[cost]: #definition-tooltip \"A mathematical function used to measure the difference between the predicted output of a model or algorithm and the actual output, with the goal of minimizing this difference through optimization.\"\n",
-    "\n",
-    "[converge]: #definition-tooltip \"Reaching a stable and optimal solution, where further iterations or modifications to the algorithm no longer result in significant improvements or changes to the solution.\""
+    "5. **Adjust ansatz parameters with results, and re-run**: The  entire process is repeated until the classical optimizer's finalization criteria are met, and an optimal set of parameter values $\\vec\\theta^*$ is returned. The proposed solution state for our problem will then be $|\\psi(\\vec\\theta^*)\\rangle = U_A(\\vec\\theta^*)|0\\rangle$."
    ]
   },
   {
@@ -129,13 +123,13 @@
    "source": [
     "### Mathematical intuition for energy and ground states\n",
     "\n",
-    "In quantum mechanics, energy comes in the form of a quantum observable usually referred to as the _Hamiltonian_, which we'll denote by $\\hat{\\mathcal{H}}$. Let us consider its [spectral decomposition][decomposition]:\n",
+    "In quantum mechanics, energy comes in the form of a quantum observable usually referred to as the _Hamiltonian_, which we'll denote by $\\hat{\\mathcal{H}}$. Let us consider its <DefinitionTooltip definition=\"Process of expressing a matrix as a sum of eigenvalues and eigenvectors, which enables the analysis and manipulation of its properties and behavior.\">spectral decomposition</DefinitionTooltip>:\n",
     "\n",
     "$$\n",
     "\\hat{\\mathcal{H}} = \\sum_{k=0}^{N-1} \\lambda_k |\\phi_k\\rangle \\langle \\phi_k|\n",
     "$$\n",
     "\n",
-    "where $N$ is the dimensionality of the space of states, $\\lambda_{k}$ is the $k$-th eigenvalue or, physically, the $k$-th energy level, and $|\\phi_k\\rangle$ is the corresponding [eigenstate][eigenstate]: $\\hat{\\mathcal{H}}|\\phi_k\\rangle = \\lambda_k |\\phi_k\\rangle$, the expected energy of a system in the (normalized) state $|\\psi\\rangle$ will be:\n",
+    "where $N$ is the dimensionality of the space of states, $\\lambda_{k}$ is the $k$-th eigenvalue or, physically, the $k$-th energy level, and $|\\phi_k\\rangle$ is the corresponding <DefinitionTooltip definition=\"State of a physical system in which a magnitude like energy or momentum has a fixed value.\">eigenstate</DefinitionTooltip>: $\\hat{\\mathcal{H}}|\\phi_k\\rangle = \\lambda_k |\\phi_k\\rangle$, the expected energy of a system in the (normalized) state $|\\psi\\rangle$ will be:\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -180,11 +174,7 @@
     "\\min_{\\vec\\theta} \\langle \\psi(\\vec\\theta)|\\hat{\\mathcal{H}}|\\psi(\\vec\\theta)\\rangle \\geq \\lambda_0.\n",
     "$$\n",
     "\n",
-    "The minimum value of $C(\\vec\\theta)$ will be the closest that one can get to $\\lambda_0$ using the parametrized states $|\\psi(\\vec\\theta)\\rangle$, and equality will only be reached if there exists a parameter vector $\\vec\\theta^*$ such that $|\\psi(\\vec\\theta^*)\\rangle = |\\phi_0\\rangle.$\n",
-    "\n",
-    "[decomposition]: #definition-tooltip \"Process of expressing a matrix as a sum of eigenvalues and eigenvectors, which enables the analysis and manipulation of its properties and behavior.\"\n",
-    "\n",
-    "[eigenstate]: #definition-tooltip \"State of a physical system in which a magnitude like energy or momentum has a fixed value.\""
+    "The minimum value of $C(\\vec\\theta)$ will be the closest that one can get to $\\lambda_0$ using the parametrized states $|\\psi(\\vec\\theta)\\rangle$, and equality will only be reached if there exists a parameter vector $\\vec\\theta^*$ such that $|\\psi(\\vec\\theta^*)\\rangle = |\\phi_0\\rangle.$"
    ]
   },
   {
@@ -202,7 +192,7 @@
    "source": [
     "### Variational theorem of Quantum Mechanics\n",
     "\n",
-    "If the (normalized) state $|\\psi\\rangle$ of a quantum system depends on a parameter vector $\\vec\\theta$, then the optimal approximation of the ground state (that is, the eigenstate $|\\phi_0\\rangle$ with the minimum eigenvalue $\\lambda_0$) is the one that minimizes the [expectation value][expectation] of the Hamiltonian $\\hat{\\mathcal{H}}$:\n",
+    "If the (normalized) state $|\\psi\\rangle$ of a quantum system depends on a parameter vector $\\vec\\theta$, then the optimal approximation of the ground state (that is, the eigenstate $|\\phi_0\\rangle$ with the minimum eigenvalue $\\lambda_0$) is the one that minimizes the <DefinitionTooltip definition=\"Average value of a measurement of a quantum system in a particular state, weighted by the probability of the outcome of the state.\">expectation value</DefinitionTooltip> of the Hamiltonian $\\hat{\\mathcal{H}}$:\n",
     "\n",
     "$$\n",
     "\\langle \\hat{\\mathcal{H}} \\rangle(\\vec\\theta) :=\n",
@@ -215,9 +205,7 @@
     "- For physical reasons, a finite lower bound to the energy $E \\geq \\lambda_0 > -\\infty$ needs to exist, even for $N\\rightarrow\\infty$.\n",
     "- Upper bounds do not generally exist.\n",
     "\n",
-    "However, mathematically speaking, there is nothing special about the Hamiltonian $\\hat{\\mathcal{H}}$ beyond these assumptions, so the theorem can be generalized to other quantum observables and their eigenstates provided they follow the same constraints. Also, note that if finite upper bounds exist, the same mathematical arguments could be made for maximizing eigenvalues by swapping lower bounds for upper bounds.\n",
-    "\n",
-    "[expectation]: #definition-tooltip \"Average value of a measurement of a quantum system in a particular state, weighted by the probability of the outcome of the state.\""
+    "However, mathematically speaking, there is nothing special about the Hamiltonian $\\hat{\\mathcal{H}}$ beyond these assumptions, so the theorem can be generalized to other quantum observables and their eigenstates provided they follow the same constraints. Also, note that if finite upper bounds exist, the same mathematical arguments could be made for maximizing eigenvalues by swapping lower bounds for upper bounds."
    ]
   },
   {
