--- a/learning/courses/variational-algorithm-design/reference-states.ipynb
+++ b/learning/courses/variational-algorithm-design/reference-states.ipynb
@@ -15,11 +15,9 @@
    "source": [
     "# Reference states\n",
     "\n",
-    "In this lesson, we will explore how we can initialize our system with a [reference state][reference] to help our variational algorithm converge faster. First, we will learn how to construct a reference state manually, and then explore several standard options that can be used in a variational algorithm.\n",
+    "In this lesson, we will explore how we can initialize our system with a <DefinitionTooltip definition=\"The initial, fixed start for our problem. Typically this refers to |0>, but we can configure it to a variety of states that suitably encode our problem.\">reference state</DefinitionTooltip> to help our variational algorithm converge faster. First, we will learn how to construct a reference state manually, and then explore several standard options that can be used in a variational algorithm.\n",
     "\n",
-    "![Diagram of options for references states including default, application-specific, and quantum.](/learning/images/courses/variational-algorithm-design/reference-states/reference-workflow.svg)\n",
-    "\n",
-    "[reference]: #definition-tooltip \"The initial, fixed start for our problem. Typically this refers to |0>, but we can configure it to a variety of states that suitably encode our problem.\""
+    "![Diagram of options for references states including default, application-specific, and quantum.](/learning/images/courses/variational-algorithm-design/reference-states/reference-workflow.svg)"
    ]
   },
   {
