--- a/docs/guides/multiverse-computing-singularity.ipynb
+++ b/docs/guides/multiverse-computing-singularity.ipynb
@@ -1104,7 +1104,7 @@
  "metadata": {
   "description": "A Qiskit Function to create and train a hybrid quantum ensemble classifier from multiple learners and optimizes them for diversity and generalization with QAOA",
   "kernelspec": {
-   "display_name": "qiskit-documentation-3.12",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1118,7 +1118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "title": "Singularity Machine Learning by Multiverse Computing"
  },
